<resources>
    <string name="app_name">Colloquium</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="generate_subject_code">Generate Subject Code</string>
    <string name="subject_name">Subject Name</string>
    <string name="create_the_group">Create the Group</string>
    <string name="code_appears_here">Code appears here</string>
    <string name="generate">Generate</string>
    <string name="upload_files">Upload Files</string>
    <string name="no_file_is_selected">No File is Selected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
